deploy/duckdns-ssl/ks-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ks-ui
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - <your-duckdns-domain>
      secretName: ks-ui-tls
  rules:
    - host: <your-duckdns-domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ks-ui
                port:
                  number: 443
